# gr-prowess

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.md  Makefile  README.md  plotter.py
apps/: CMakeLists.txt  add_const.py  add_const_edf.py  buf_flowgraph.py  case_study.py  case_study_edf.py  decimator.py  freq_shift.py  interpolator.py  msg_flowgraph.py  multiply_const.py  run_flowgraph.py  simple_flowgraph.py
cmake/Modules/: gnuradio-prowessConfig.cmake  targetConfig.cmake.in
docs/: CMakeLists.txt  README.prowess
docs/doxygen/: CMakeLists.txt  Doxyfile.in  update_pydoc.py
examples/: data_gen_config.json  prowess_test.grc
grc/: CMakeLists.txt  prowess_copy_rand.block.yml  prowess_message_forward.block.yml  prowess_ncopy.block.yml  prowess_null_sink_latency.block.yml  prowess_null_source_latency.block.yml  prowess_signal_generator.block.yml
lib/: CMakeLists.txt  copy_rand_impl.cc  copy_rand_impl.h  message_forward_impl.cc  message_forward_impl.h  ncopy_impl.cc  ncopy_impl.h  null_sink_latency_impl.cc  null_sink_latency_impl.h  null_source_latency_impl.cc  null_source_latency_impl.h  tracepoint.cpp  tracepoint.h
python/prowess/bindings/: CMakeLists.txt  copy_rand_python.cc  failed_conversions.txt  message_forward_python.cc  ncopy_python.cc  null_sink_latency_python.cc  null_source_latency_python.cc  python_bindings.cc
python/prowess/bindings/docstrings/: copy_rand_pydoc_template.h  message_forward_pydoc_template.h  ncopy_pydoc_template.h  null_sink_latency_pydoc_template.h  null_source_latency_pydoc_template.h
utils/: config_os_for_prowess.sh  restore_os_config.sh  run.sh
(+23 files in other folders)
